# SelfHost

./: .env.example  .gitignore  Cargo.toml  LOCAL_SETUP.md  README.md  agent_config.json  docker-compose.yml  server.Dockerfile  test_server.py
agent/: Cargo.toml
agent/src/: app_manager.rs  main.rs  tunnel_client.rs
api/: Dockerfile  fix_subdomains.mjs  package-lock.json  package.json
api/src/: db.ts  index.ts  models.ts  proxy.ts  tunnel.ts
api/src/middleware/: auth.ts
api/src/routes/: agent.ts  apps.ts  auth.ts
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/apps/[id]/: detail.module.css  page.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/dashboard/: dashboard.module.css  page.tsx
frontend/app/deploy/: deploy.module.css  page.tsx
frontend/app/lib/: api.ts
frontend/app/login/: auth.module.css  page.tsx
frontend/app/register/: page.tsx
server/: Cargo.toml
server/src/: auth.rs  config.rs  db.rs  main.rs  proxy.rs  tunnel.rs
server/src/api/: agent.rs  apps.rs  auth.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  tunnel.rs
