[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Web framework
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
actix-files = "0.6"
futures-util = "0.3"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Logging
env_logger = "0.11"
log = "0.4"

# Misc
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenv = "0.15"
